fix dynamic  background on mobile devices

--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -10,6 +10,7 @@
         max-width: none;
         height: 100%;
         border-radius: 0px;
+        background: none;
     }
     #current-temperature{
         font-size: 32px !important; 
@@ -17,8 +18,14 @@
 }
 @media screen and (max-width: 768px) {
     
+    main{
+        padding: 0px;
+    }
     main > section:nth-child(1){
+        width: 70%;
+        height: 100%;
         text-align: center;
+        border-radius: 0px;
     }
     .weather-header{
         flex-direction: column;
